[package]
name = "dynners"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Only enable either curl or ureq, do not enable both together
default = ["ureq"]
curl = ["dep:curl"]
ureq = ["dep:ureq"]
regex = ["dep:regex"]

[dependencies]
crc32fast = "^1.3.2"
curl = { version = "^0.4.44", optional = true }
data-encoding = "^2.4.0"
libc = "^0.2.150"
regex = { version = "^1.10.2", optional = true }
serde = "^1.0.192"
serde_derive = "^1.0.192"
serde_json = "^1.0.108"
serde_repr = "^0.1.17"
thiserror = "^1.0.50"
toml = { version = "^0.8.8", features = ["parse"], default-features = false }
ureq = { version = "^2.8.0", features = ["native-certs", "json"], optional = true }

[profile.release]
opt-level = "s"
strip = "debuginfo"
lto = "fat"
